agrego funcionalidad a la pagina pedido

--- a/pedido.html
+++ b/pedido.html
@@ -40,108 +40,108 @@
     </header>
 
     <main class="mainPedido">
-        <div class="grid-container">
+        <div id="burritos"  class="grid-container">
             <h3>
                 Burritos
             </h3>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Tradicionales</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="tradicionales" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-b-trad"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 800 </p>
             </div>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Burritos de pollo</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div  id="pollo" class="contador"> 
+                        <button class="btn-contador naranja suma">+</button> 
+                        <div id="cant-b-pollo"> 0 </div>  
+                        <button class="btn-contador rojo resta">-</button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
             </div>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Burritos de arroz</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="arroz" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-b-arroz"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
             </div>
         </div>
-        <div class="grid-container">
+        <div id="nachos" class="grid-container">
             <h3>
                 Nachos
             </h3>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Nachos con wacamole</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="wacamole" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-n-w"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : Nachos bañados en salsa guacamole ..... $ 600 </p>
             </div>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Nachos con cheddar</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="cheddar" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-n-c"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : Nachos bañados con salsa cheedar y panceta ..... $ 600 </p>
             </div>
 
         </div>
-        <div class="grid-container">
+        <div id="tacos" class="grid-container">
             <h3>
                 Tacos
             </h3>
             <div class="grid-item">
-                <div class="comida">
+                <div  class="comida">
                     <p>Tacos set</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="set" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-t-set"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 750 </p>
             </div>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Tacos de pollo</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="t-pollo" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-t-p"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 700 </p>
             </div>
-            <div class="grid-item">
+            <div  class="grid-item">
                 <div class="comida">
                     <p>Tacos de res</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="t-res" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="cant-t-res"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
             </div>
         </div>
         <div class="grid-container">
@@ -149,43 +149,43 @@
                 Bebidas
             </h3>
             <div class="grid-item">
-                <div class="comida">
+                <div id="bebidas" class="comida">
                     <p>Tequila</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="tequila" class="contador">
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="bebida-teq"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
             </div>
             <div class="grid-item">
                 <div class="comida">
                     <p>Tejuino</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="tejuino" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="bebida-tej"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
             </div>
             <div class="grid-item">
                 <div class="comida">
                     <p>Mezcal</p>
-                    <div class="contador"> 
-                        <button class="btn-contador naranja"> + </button> 
-                        <div> 0 </div>  
-                        <button class="btn-contador rojo"> - </button> 
+                    <div id="mezcal" class="contador"> 
+                        <button class="btn-contador naranja suma"> + </button> 
+                        <div id="bebida-mez"> 0 </div>  
+                        <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
             </div>
         
         <div class="lineaEncabezado"></div>
         <div class="totalPedido">
             <p> TOTAL : $ </p>
-            <div>0</div>
+            <div id="total">0</div>
         </div>
         <div class="contenedor-btn">
             <button class="btn-pedir"> PEDIR  </button>
@@ -217,5 +217,6 @@
             <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
