agrego mensaje de pedido enviado

--- a/nosotros.html
+++ b/nosotros.html
@@ -67,6 +67,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="sucursales.html">Sucursales</a>
                 <a href="contacto.html">Contactanos</a>
+                <a href="pedido.html">Pedido</a>
             </div>
             <div class="contenedorRedes">
                 <a href="https://web.whatsapp.com/"><img class="imgIcon" src="img/whatsapp.png" alt="link de whatsapp"></a>
