--- a/pedido.html
+++ b/pedido.html
@@ -190,6 +190,9 @@
         <div class="contenedor-btn">
             <button class="btn-pedir"> PEDIR  </button>
         </div>
+        <div class="msj-pedido">
+            <p> SU PEDIDO HA SIDO REALIZADO </p>
+        </div>
 
     </main>
     <footer>
@@ -202,6 +205,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="sucursales.html">Sucursales</a>
                 <a href="contacto.html">Contactanos</a>
+                <a href="pedido.html">Pedido</a>
             </div>
             <div class="contenedorRedes">
                 <a href="https://web.whatsapp.com/"><img class="imgIcon" src="img/whatsapp.png" alt="link de whatsapp"></a>
