agrego mensaje de pedido realizado

--- a/pedido.html
+++ b/pedido.html
@@ -53,7 +53,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 800 </p>
+                <p class="ingredientes"> 2 tortillas de trigo rellenas de mozarella, lomo y pasta de frijoles negros con crema ácida y guacamole.  ..... $ 800 </p>
             </div>
             <div  class="grid-item">
                 <div class="comida">
@@ -64,7 +64,7 @@
                         <button class="btn-contador rojo resta">-</button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
+                <p class="ingredientes"> 2 tortillas de trigo rellenas de mozarella, pollo , cebolla blanca y aceite de girasol.  ..... $ 850 </p>
             </div>
             <div  class="grid-item">
                 <div class="comida">
@@ -75,7 +75,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
+                <p class="ingredientes"> 2 tortillas de trigo rellenas de arroz, con salsa de tomate, aceite de oliva y queso rallado.  ..... $ 850 </p>
             </div>
         </div>
         <div id="nachos" class="grid-container">
@@ -91,7 +91,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : Nachos bañados en salsa guacamole ..... $ 600 </p>
+                <p class="ingredientes">  Nachos bañados en salsa guacamole ..... $ 600 </p>
             </div>
             <div  class="grid-item">
                 <div class="comida">
@@ -102,7 +102,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : Nachos bañados con salsa cheedar y panceta ..... $ 600 </p>
+                <p class="ingredientes">  Nachos bañados con salsa cheedar y panceta ..... $ 600 </p>
             </div>
 
         </div>
@@ -119,7 +119,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 750 </p>
+                <p class="ingredientes"> 3 tacos de lomo y 3 tacos de pollo en tortillas de maíz con crema ácida, lechuga y pico de gallo.  ..... $ 750 </p>
             </div>
             <div  class="grid-item">
                 <div class="comida">
@@ -130,7 +130,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 700 </p>
+                <p class="ingredientes"> 2 tacos de pollo en tortilla de maíz, con crema ácida, lechuga y pico de gallo.  ..... $ 700 </p>
             </div>
             <div  class="grid-item">
                 <div class="comida">
@@ -141,7 +141,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 850 </p>
+                <p class="ingredientes"> 2 tacos de lomo en tortilla de maíz, con crema ácida, lechuga y pico de gallo.  ..... $ 850 </p>
             </div>
         </div>
         <div class="grid-container">
@@ -157,7 +157,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
+                <p class="ingredientes"> Bebida proveniente del destilado del tequila ..... $ 200 </p>
             </div>
             <div class="grid-item">
                 <div class="comida">
@@ -168,7 +168,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
+                <p class="ingredientes"> Bebida fermentada de maiz ..... $ 200 </p>
             </div>
             <div class="grid-item">
                 <div class="comida">
@@ -179,7 +179,7 @@
                         <button class="btn-contador rojo resta"> - </button> 
                     </div>
                 </div>
-                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ 200 </p>
+                <p class="ingredientes"> Bebida proveniente del destilado del corazon del maguey ..... $ 200 </p>
             </div>
         
         <div class="lineaEncabezado"></div>
@@ -188,7 +188,7 @@
             <div id="total">0</div>
         </div>
         <div class="contenedor-btn">
-            <button class="btn-pedir"> PEDIR  </button>
+            <button id="pedir" class="btn-pedir"> PEDIR  </button>
         </div>
         <div class="msj-pedido">
             <p> SU PEDIDO HA SIDO REALIZADO </p>
