corrigo errores semnticos de html

--- a/pedido.html
+++ b/pedido.html
@@ -193,7 +193,7 @@
         <div class="msj-pedido">
             <p> SU PEDIDO HA SIDO REALIZADO </p>
         </div>
-
+    </div>
     </main>
     <footer>
         <div class="lineaFooterRosa"></div>
