--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,6 @@
         <div class="mainEncabezado">
             <div class="lineaEncabezado"></div>
         </div>
-        <section>
             <div class="contenedorContenido">
                 <div class="franjaCeleste"></div>
                 <div class="direccion listaComida">
@@ -52,7 +51,6 @@
                 </div>
                 <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
             </div>
-        </section>
         <div class="mainEncabezado">
             <div class="lineaEncabezado"></div>
         </div>
@@ -60,11 +58,11 @@
             <form class="formulario" id="formulario" action="contacto.html" method="post">
                     <h3 class="tituloForm">Contactanos</h3>
                     <input id="nombre" type="text" class="formulario_input">
-                    <label for="" class="formulario_label"> Nombre </label>
+                    <label class="formulario_label"> Nombre </label>
                     <input id="email" type="email" class="formulario_input">
-                    <label for="" class="formulario_label"> E-mail </label>
+                    <label class="formulario_label"> E-mail </label>
                     <input id="asunto" type="text" class="formulario_input">
-                    <label for="" class="formulario_label"> Asunto </label>
+                    <label class="formulario_label"> Asunto </label>
                     
                     <input type="submit" class="formulario_submit" id="enviar" value="Enviar">
 
