--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
             <div class="lineaEncabezado"></div>
         </div>
         <div class="contenedor-form">
-            <form class="formulario" id="formulario" action="" method="post">
+            <form class="formulario" id="formulario" action="contacto.html" method="post">
                     <h3 class="tituloForm">Contactanos</h3>
                     <input id="nombre" type="text" class="formulario_input">
                     <label class="formulario_label"> Nombre </label>
